--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <input type="text" id="dayInput" class="form-control" placeholder="Enter a day (A-G)">
                 <button id="submitDay" class="btn btn-primary mt-2">Show Schedule</button>
             </div>
-            <div class="schedule">
+            <div class="schedule mt-4">
                 <h3 class="text-center">Your Schedule for the Day</h3>
                 <table class="table table-bordered table-striped">
                     <thead>
