--- a/index.html
+++ b/index.html
@@ -3,45 +3,44 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> JSON and AJAX schedule</title>
+    <title>JSON and AJAX Schedule</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header>
-  
-
-        <div class="container">
-            <h1 class="text-center">SCHEDULE</h1>
-    
-            <div class="form-group">
-                <label for="dayInput">Select Day (A-G):</label>
-                <input type="text" id="dayInput" class="form-control" placeholder="Enter a day (A-G)">
-                <button id="submitDay" class="btn btn-primary mt-2">Show Schedule</button>
-            </div>
-            <div class="schedule mt-4">
-                <h3 class="text-center">Your Schedule for the Day</h3>
-                <table class="table table-bordered table-striped">
-                    <thead>
-                        <tr>
-                            <th>Period</th>
-                            <th>Time</th>
-                            <th>Class</th>
-                            <th>Teacher</th>
-                            <th>Room</th>
-                        </tr>
-                    </thead>
-                    <tbody id="scheduleList"></tbody>
-                </table>
-            </div>
+      <div class="container">
+        <h1 class="text-center my-4">Student Class Schedule</h1>
+        <div class="form-group mb-4">
+          <label for="dayInput" class="form-label">Select Day (A-G):</label>
+          <div class="input-group">
+            <input type="text" id="dayInput" class="form-control" placeholder="Enter a day (A-G)">
+            <button id="submitDay" class="btn btn-primary">Show Schedule</button>
           </div>
-
-
-
-    <script src="js/script.js"></script>
+        </div>
+        <div class="schedule mt-4">
+          <h3 class="text-center mb-3">Your Schedule for the Day</h3>
+          <table class="table table-bordered table-striped text-center">
+            <thead class="table-dark">
+              <tr>
+                <th>Period</th>
+                <th>Time</th>
+                <th>Class</th>
+                <th>Teacher</th>
+                <th>Room</th>
+              </tr>
+            </thead>
+            <tbody id="scheduleList">
+              <tr>
+                <td colspan="5" class="text-muted">Enter a valid day to see your schedule.</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </header>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
-
-
-
